--- a/keynote.html
+++ b/keynote.html
@@ -14,7 +14,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
     <div class="keynotes">
     <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
       <div class="unit-spacer">
-      <!-- <a href="#Dr. Jianbing Li"> -->Dr. Jianbing Li<!-- </a> --><br>
+      <a href="#Dr. Jianbing Li">Dr. Jianbing Li</a><br> 
            <p class="body">Univeristy of Northern British Columbia, Canada</p>
       </div>
     </div>
@@ -27,18 +27,18 @@ keyword: environment conference, biofuels conference, desalination conference, w
     </div> -->
     </div> <!-- End Keynotes -->
 
-  <!-- <span class="anchor" id="Dr. Jianbing Li"></span>
+  <span class="anchor" id="Dr. Jianbing Li"></span>
   <div class="keynote-info">
   <p class="bold">Dr. Jianbing Li</p><img src="../img/Li.jpg" width="250" align="right" class="keynote-img">
-  <p class="body">I was graduated from Faculty Engineering, Osaka University in 1982 and from Graduated School of Engineering , Osaka University in 1984. After that, I had worked in Matsushita Electric Industry (Panasonic) for 5 years. From 1989, I has been working in Osaka University as an assistant professor, associated professor and professor. I received PhD in 1999 and its thesis is “Study on development of numerical simulation model in order to mitigate urban atmospheric environment”. I am researching on the environmental dynamics modeling in the wide ranges from global scale to indoor scale. Moreover I carried out the joint researches in South-East Asia; Nepal, Indonesia, Korea, China, Vietnam, and Thailand. Throughout these researches, I received the best paper award from The Society of Heating, Air Conditioning and Sanitary Engineering of Japan in 2010 and received the best paper award from the Society of Environmental Science of Japan in 2012 and received the best academic award from Atmospheric Environmental Society of Japan in 2015. I am the author of more than 80 peer-reviewed articles including articles written in Japanease, and 80 international conference papers with limited peer review.</p>
+  <p class="body">Dr. Jianbing Li is a professor and professional engineer (P.Eng.) in the environmental engineering program at the University of Northern British Columbia (UNBC) in Canada. He also holds adjunct professorship at several Chinese universities. He obtained his PhD degree in environmental systems engineering from the University of Regina in 2003. His major research interests include soil and groundwater remediation, environmental pollution control, environmental modeling and risk assessment, and environmental systems analysis. His research has been supported by a number of federal, provincial and municipal funding organizations. He has supervised more than 25 graduate students (PhD and MSc.) and postdoctoral fellows and hosted more than 10 visiting scholars in his laboratory. He has published more than 180 journal and conference papers, with an h-index of 30 and one paper being listed as one of the most cited Journal of Hazardous Materials Articles. He received the UNBC Research Excellence or Achievement Award for three times, as well as the 2013 Northern BC Business and Technology Award. He also received several best paper awards from two international conferences and one international journal. He served as a guest editor for three international journals, and acted as a committee member for many international conferences. He acted as an external examiner for 7 PhD dissertations. He regularly serves as a reviewer for many international journals and conferences as well as a variety of national and international research funding organizations. </p>
 
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Performance of Meteorological and Air Quality Modeling for PM2.5 Simulation, and Impact of Aerosol Direct Effect</p>
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Petroleum Sludge Waste Treatment through Combined Processes of Ultrasonic Irradiation, Solvent Extraction and Po-Pyrolysis</p>
 
-  <a href="../paper/Keynote - Dr. Kondo.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
+  <a href="../paper/Keynote - Dr.Li.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div>  --> <!-- End Keynote Info-->
+  </div>  <!-- End Keynote Info-->
 
 
   
