--- a/paypal.html
+++ b/paypal.html
@@ -21,7 +21,7 @@ keyword: environment conference, biofuels conference, desalination conference, w
 	 <option value="Additional Paper">Additional Paper €150.00 EUR</option>
 	 <option value="Accompanying Person">Accompanying Person €150.00 EUR</option>
 	 <option value="Closing Ceremony">Closing Ceremony €70.00 EUR</option>
-	 <!-- <option value="NewTech Workshop">NewTech Workshop €122.00 EUR</option> -->
+	 <option value="NewTech Workshop">NewTech Workshop €150.00 EUR</option>
 	</select> </td></tr>
 	</table>
 	<input type="hidden" name="currency_code" value="EUR">
