--- a/index.html
+++ b/index.html
@@ -7,34 +7,59 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) aims to become the leading annual conference in fields related to environmental pollution and remediation. The goal of ICEPR'18 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
+    <p class="body"><strong>The 8<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'18) aims to become the leading annual conference in fields related to environmental pollution and remediation.</strong> The goal of ICEPR'18 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
 
-    <p class="body">All accepted and presented papers will be published in the conference proceedings, under an ISBN reference in a USB drive. The online version of the proceedings will also be published under an ISSN reference and each paper in the proceedings will be assigned unique DOIs by CrossRef. The conference proceedings will be indexed by: <strong><i><a href="https://www.scopus.com/home.uri" target="_blank" class="body-link">Scopus</a></i></strong> and <a href="https://scholar.google.ca/" target="_blank" class="body-link"><strong><i>Google Scholar</i></strong></a>. Furthermore, selected papers from the conference will be submitted for possible publication in the following journals from <a href="http://avestia.com/" class="body-link">Avestia Publishing</a> (publication fees may apply):</p>
+    <p class="body"><b>ICEPR</b> is an acronym for <b>I</b>nternational <b>C</b>onference on <b>E</b>nvironmental <b>P</b>ollution and <b>R</b>emediation.</p>
 
-	<p class="body indent"><a href="http://ijepr.avestia.com" class="body-link">International Journal of Environmental Pollution and Remediation</a></p>
+    <br>
+    <h2>Submissions</h2>
+    <p class="body">Submissions in the form of extended abstracts, short papers, and full manuscripts are welcome.</p>
+            <ul>
+              <li>all submitted papers will be <strong>peer-reviewed</strong></li>
+              <li>the congress proceedings will be published under an <strong>ISSN</strong> and <strong>ISBN</strong> number</li>
+              <li>each paper will be assigned a unique <strong>DOI</strong> number by <strong><a href="https://www.crossref.org/" target="_blank" class="body-link">Crossref</a></strong></li>
+              <li>the conference proceedings will be indexed by <strong><a href="https://www.scopus.com/" target="_blank" class="body-link">Scopus</a></strong> and <strong><a href="https://scholar.google.com/" target="_blank" class="body-link">Google Scholar</a></strong></li>
+              <li>the proceedings will be permanently archived in <strong><a href="http://www.portico.org/digital-preservation/" target="_blank" class="body-link">Portico</a></strong> (one of the largest community-supported digital archives in the world). </li>
+              <li>selected papers from the congress will be submitted for possible publication in the <strong><a  class="body-link" href="http://ijepr.avestia.com/" target="_blank">International Journal of Environmental Pollution and Remediation (IJEPR)</a></strong> (publication fees may apply)</li>
+            </ul>
 
-	<p class="body"><b>ICEPR</b> is an acronym for <b>I</b>nternational <b>C</b>onference on <b>E</b>nvironmental <b>P</b>ollution and <b>R</b>emediation.</p>
+    <p class="body">To learn more about the previous event in this conference series, please visit: <a href="/past-events/" class="body-link">Past Event</a>.</p>
 
-	<p class="body">To view the website for the previous event in this conference series, please visit: <a href="http://2017.icepr.org" class="body-link mob-link">www.2017.icepr.org</a></p>
+    <br>
+    <h2>Paper Topics</h2>
+      <p class="body">ICEPR'18 is now accepting papers on the following topics.</p>
+      <ul class="topics">
+      <li>Air, Soli & Water pollution and treatment</li>
+      <li>Biofuels</li>
+      <li>Environmental Protection</li>
+      <li>Environmental Safety Regulations</li>
+      <li>Environmental Sustainability and Development</li>
+      <li>Green Manufacturing and Technologies, Pollution Prevention</li>
+      <li>Greenhouse Effect, Global Warming, and Climate Change</li>
+      <li>Impact of Industrialization on the Environment</li>
+      </ul>
+      <p class="body">For a complete list of the paper topics, please visit: <a href="/papers" class="body-link">Submissions</a>.</p>
 
-  <h2>Keynote Speakers:</h2>
-    <center>
-    <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
-      <img src="../img/Li.jpg" class="flex-img">
-      <p class="body"><b>Dr. Jianbing Li,</b><br>Univeristy of Northern British Columbia, Canada<br><a href="../keynote#Dr. Jianbing Li" class="body-link">Biography & Abstract</a></p>
-   <br>
-   </div>
-  </center>
+      <br>
 
-	<div class="sponsor">
-	<a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br>
+      <h2>Keynote Speakers:</h2>
+        <center>
+        <div class="unit unit-s-1-1 unit-m-1-2 unit-l-1-2 keynoteIndex">
+          <img src="../img/Li.jpg" class="flex-img" alt="Dr. Jianbing Li">
+          <p class="body"><b>Dr. Jianbing Li,</b><br>Univeristy of Northern British Columbia, Canada<br><a href="../keynote#Dr. Jianbing Li" class="body-link">Biography & Abstract</a></p>
+       <br>
+       </div>
+      </center>
 
-	<a href="http://avestia.com"><img src="../img/avestia.png" class="flex-sponsor"></a>
+    <br>
+      <div class="sponsor">
+        <a href="http://international-aset.com" target="_blank"><img src="../img/int-aset.svg" alt="International Academy of Science, Engineering and Technology (International ASET Inc.) " style="max-width:250px; float:left;  padding: 40px 25px 20px 25px;"></a>
 
-  <!-- <a href="http://esemag.com"><img src="../img/esemag.jpg" class="flex-sponsor"></a>
+        <a href="http://avestia.com" target="_blank"><img src="../img/avestia.png" alt="Avestia Publishing" style="max-width:150px; float:left;  padding: 0px 20px 0px 20px;"></a>
 
-  <a href="http://industryarc.com/about-us.php"><img src="../img/industryarc.jpg" class="flex-sponsor"></a> -->
-	</div>
+         <a href="http://where2submit.com" target="_blank"><img src="../img/W2S_logo.png" alt="Where2Submit"style="max-width:230px; float:left;  padding: 35px 25px 0px 25px;"></a>
+        <div class="cf"></div>
+      </div>
 
   </div>
   </div>
